--- a/Sample/Client/Unit9.fmx
+++ b/Sample/Client/Unit9.fmx
@@ -7,20 +7,22 @@ object Form9: TForm9
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
+  OnDestroy = FormDestroy
   DesignerMasterStyle = 0
   object TabControl1: TTabControl
     Align = Client
     Size.Width = 640.000000000000000000
-    Size.Height = 480.000000000000000000
+    Size.Height = 380.000000000000000000
     Size.PlatformDefault = False
     TabIndex = 1
-    TabOrder = 1
+    TabOrder = 0
     TabPosition = PlatformDefault
     Sizes = (
       640s
-      454s
+      354s
       640s
-      454s)
+      354s)
     object TabItem1: TTabItem
       CustomIcon = <
         item
@@ -47,11 +49,94 @@ object Form9: TForm9
       object TreeView1: TTreeView
         Align = Left
         Size.Width = 100.000000000000000000
-        Size.Height = 454.000000000000000000
+        Size.Height = 354.000000000000000000
         Size.PlatformDefault = False
         TabOrder = 0
         Viewport.Width = 96.000000000000000000
-        Viewport.Height = 450.000000000000000000
+        Viewport.Height = 350.000000000000000000
+      end
+    end
+  end
+  object GroupBox1: TGroupBox
+    Align = Top
+    Padding.Left = 1.000000000000000000
+    Padding.Top = 18.000000000000000000
+    Padding.Right = 1.000000000000000000
+    Padding.Bottom = 1.000000000000000000
+    Size.Width = 640.000000000000000000
+    Size.Height = 100.000000000000000000
+    Size.PlatformDefault = False
+    Text = #1060#1110#1083#1100#1090#1088' '#1087#1086#1089#1083#1091#1075
+    TabOrder = 1
+    object Layout1: TLayout
+      Align = Top
+      Padding.Left = 20.000000000000000000
+      Padding.Top = 1.000000000000000000
+      Padding.Right = 1.000000000000000000
+      Padding.Bottom = 1.000000000000000000
+      Position.X = 1.000000000000000000
+      Position.Y = 18.000000000000000000
+      Size.Width = 638.000000000000000000
+      Size.Height = 24.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 2
+      object edtFilterTextInput: TEdit
+        Touch.InteractiveGestures = [LongTap, DoubleTap]
+        Align = Client
+        TabOrder = 0
+        Size.Width = 617.000000000000000000
+        Size.Height = 22.000000000000000000
+        Size.PlatformDefault = False
+        TextPrompt = #1055#1086#1096#1091#1082
+        object ClearEditButton1: TClearEditButton
+          CanFocus = False
+          Cursor = crArrow
+          Size.Width = 28.000000000000000000
+          Size.Height = 18.000000000000000000
+          Size.PlatformDefault = False
+          TabOrder = 0
+        end
+      end
+    end
+    object Layout2: TLayout
+      Align = Top
+      Padding.Left = 20.000000000000000000
+      Padding.Top = 1.000000000000000000
+      Padding.Right = 1.000000000000000000
+      Padding.Bottom = 1.000000000000000000
+      Position.X = 1.000000000000000000
+      Position.Y = 66.000000000000000000
+      Size.Width = 638.000000000000000000
+      Size.Height = 24.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 1
+      object cbFilterCity: TComboBox
+        Align = Client
+        Size.Width = 617.000000000000000000
+        Size.Height = 22.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 0
+      end
+    end
+    object Layout3: TLayout
+      Align = Top
+      Padding.Left = 20.000000000000000000
+      Padding.Top = 1.000000000000000000
+      Padding.Right = 1.000000000000000000
+      Padding.Bottom = 1.000000000000000000
+      Position.X = 1.000000000000000000
+      Position.Y = 42.000000000000000000
+      Size.Width = 638.000000000000000000
+      Size.Height = 24.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 0
+      object cbFilterRegion: TComboBox
+        Align = Client
+        Size.Width = 617.000000000000000000
+        Size.Height = 22.000000000000000000
+        Size.PlatformDefault = False
+        TabOrder = 0
+        OnChange = cbFilterRegionChange
       end
     end
   end
